AileronAirwaysWeb/wwwroot/css/timeline.css
* {
    box-sizing: border-box;
}


body {
    font-family: Helvetica, sans-serif;
    background-color: white;
    /*padding-top: 50px;
    padding-bottom: 20px;*/
}


a {
    text-decoration: none;
}
a:hover {
    text-decoration: none;
}






/*Navigation ------------------------------------------------------------- */
.navbar {
   
    background-color: #0D1B2E;
}

.navList {
    width: 100%;
    top: 0;
}



ul {
    list-style-type: none;
    margin: 0;
}

li {
    float: left;
    padding: 0 10px;
}

    li > a {
        color: #fff;
    }

 
/*Main Header Section - Top of timelineEvents view*/
.headerSection {
    align-content: center;
    width: 100%;
    text-align: center;
    padding: 80px 0 20px 0;

}


.mainHeader {
    font-family: Verdana, Geneva, sans-serif;
    font-weight: bold;
}









/* Set padding to keep content from hitting the edges 
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}
*/



/* The actual timeline (the vertical ruler) */

/* The actual timeline (the vertical ruler) */
.timeline {
    position: relative;
    max-width: 100%;
    width: 100%;
    margin: 0;
}

    /* The actual timeline (the vertical ruler) */
    .timeline::after {
        content: '';
        position: absolute;
        width: 2px;
        background-color: #0D1B2E;
        top: 0;
        bottom: 0;
        left: 50%;
        margin-left: -3px;
    }

/* containerTimeline around content */
.containerTimeline {
    padding: 10px 40px;
    position: relative;
    background-color: inherit;
    width: 50%;
    
}

    /* The circles on the timeline */
    .containerTimeline::after {
        content: '';
        position: absolute;
        width: 25px;
        height: 25px;
        right: -17px;
        background-color: white;
        border: 2px solid #0D1B2E;
        top: 15px;
        border-radius: 50%;
        z-index: 1;
    }

/* Place the containerTimeline to the left */
.left {
    left: 0;
}

/* Place the containerTimeline to the right */
.right {
    left: 50%;
}

/* Add arrows to the left containerTimeline (pointing right) */
.left::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 18px;
    width: 0;
    z-index: 1;
    right: 30px;
    border: medium solid white;
    border-width: 10px 0 10px 10px;
    border-color: transparent transparent transparent #0D1B2E;
}

/* Add arrows to the right containerTimeline (pointing left) */
.right::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 18px;
    width: 0;
    z-index: 1;
    left: 30px;
    border: medium solid white;
    border-width: 10px 10px 10px 0;
    border-color: transparent #0D1B2E transparent transparent;
}

/* Fix the circle for containerTimelines on the right side */
.right::after {
    left: -14px;
}

.left::after {
    right: -11px;
}





/* The actual content */
.eventContent {
    background-color: white;
    position: relative;
    /*border-radius: 6px;*/
    border: 1.5px solid #0D1B2E;


    display: flex;
    flex-wrap: nowrap;
    min-height: 150px;
}



/* Subsection of eventContent thats hows date and time and icons */
.eventDateSection {
    width: 120px;
    height: inherit;
    float: left;
    background-color: rgba(112,112,112,.3);

    border: medium solid #0D1B2E;
    border-width: 0 1.5px 0 0;
    
    text-align: center;

}


.eventBodySection {
    width: 100%;
    height: inherit;
    float: left;


    line-height: 1.2;
}


.eventContentPadding {
    padding: 0 15px 5px 15px;
}

.editDelete {
    float: right;
    padding: 0 5px 0 5px;
    bottom: 0px
}

.eventDateTime {
    height: 55%; 
    width: 100%;
}


.uppercase {
    text-transform: uppercase;
}

.eventIconDisplay {
    float: right;
    width: 100%;
    height: 45%;
    border: medium solid #0D1B2E; 
    border-width: 1.5px 0 0 0;



}

.iconSection {
    float: left;
    width: 31%;
    align-content: center;
    padding: 0 1%;
}



/* Media queries - Responsive timeline on screens less than 700px wide */
@media all and (max-width: 950px) {
    /* Place the timelime to the left */
    .timeline::after {
        left: 31px;
        margin: 0 auto;
    }

    /* Full-width containerTimelines */
    .containerTimeline {
       width: 100%;
        padding-left: 70px;
        padding-right: 25px;
    }

        /* Make sure that all arrows are pointing leftwards */
        .containerTimeline::before {
            left: 60px;
            border: medium solid white;
            border-width: 10px 10px 10px 0;
            border-color: transparent #0D1B2E transparent transparent;
        }

   



    /* Make sure all circles are at the same spot */
    .left::after, .right::after {
        left: 18px;
    }

    /* Make all right containerTimelines behave like the left ones */
    .right {
        left: 0%;
    }

}







/*Static Button -------------------------*/
#addEventBtn {
    display: block;
    position: fixed;
    bottom: 60px;
    right: 60px;
    z-index: 99;
    font-size: 22px;
    border: none;
    outline: none;
    background-color: #0D1B2E;
    color: white;
    cursor: pointer;
    padding: 15px;
    width: 60px;
    height: 60px;
    border-radius: 50px;
}

#addEventBtn:hover {
    background-color: #008CBA;
    color: #0D1B2E;
}










/*Side Panel - TL Overview ------------------------------------*/

#mainSidePanel {
    transition: margin-left .5s;

}



.sidenav {
    height: 100%;
    width: 20px;
    position: fixed;
    /* z-index: 1;*/
    top: 0px;
    left: 0px;
    background-color: #f0e8eb;
    overflow-x: hidden;
    overflow-y: hidden;
    transition: 0.5s;
    display: inline;
    border-right: 1px solid #0D1B2E;
}



.sidenav a:hover {
    color: #0D1B2E;
}

.sidenav .closebtn {
    position: absolute;
    right: 25px;

    font-size: 36px;
}


#sideNavArrows {

    width: 100%;
    padding-top: 65px;
    padding-left: 5px;
    display: block;
    cursor: pointer;
}


/*#eventNameContainer {
    height: 100%;
    width: 100%;
    overflow: hidden;
    position: relative;
    

}*/

#sideNavContent {
    height: 100%;
    position: relative;
    overflow: hidden;
}



#eventNameList {
    height: 70%;
    width: 90%;
    position: absolute;
    display: inline;
    padding: 5% 5% 5% 5%;
    overflow-y: auto;
    left: 10px;
    right: -15px;

}


    #eventNameList a {
        padding: 4px;
        text-decoration: none;
        font-size: 12px;
        display: block;
        transition: 0.3s;
    }



h3.eventDate {
    font-size: 18px;
    font-weight: bold;
}


.sidPanelHR {
    width: 100%;
    border: none;
    border-bottom: 1px solid #0D1B2E;
    align-content: center;
}

#searchBox {
    width: 80%;
    align-content: center;
    margin: 0 10%;
    padding: 0 0 20px 0;
}

#myInputSearchEvents {
    padding-left: 10px;
}


@media screen and (max-height: 450px) {
    .sidenav {
        padding-top: 15px;
    }

        .sidenav a {
            font-size: 18px;
        }
}







/*HR Display ------------------------------------ */
.displayHR {
    width: 50px;
    border: none;
    border-bottom: 1px solid black;
}

.headerHR {
    width: 50px;
    border: none;
    border-bottom: 2px solid #0D1B2E;
}





/*Right/left Arrow Icon*/
i {
    border: solid black;
    border-width: 0 2px 2px 0;
    display: inline-block;
    padding: 3px;
}

.rightArrow {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
}

.leftArrow {
    transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
}


.upArrow {
    transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
}




.backToTopContainer {
    width: 100%;
    padding: 40px 10px 10px 10px;
    text-align: center;
    cursor: pointer;
}




.backToTop {
    transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
    border: solid black;
    border-width: 0 6px 6px 0;
    display: inline-block;
    padding: 10px;
}



/*Button */
.btn {
}

.btnMain {
    background-color: rgba(255, 255, 255, 0.8);
    color: #008CBA;
    border: 2px solid #008CBA;
    text-decoration: none;
    padding: 5px 10px;


    /*float: right;*/
}

    .btnMain:hover {
        background-color: #008CBA;
        color: white;
        text-decoration: none;
    }







/* ---------------- Footer --------------------- */
footer {
    position: relative;

    text-align: center;
    float: left;

    font-size: .8em;
    width: 100%;
    padding: 20px 0;


    bottom: 0;
    z-index: 1;
}

    footer p {
        display: inline;
        color: gray;
    }

